# beqanalyser

./: .gitignore  LICENCE.md  README.md  pyproject.toml
beqanalyser/: __init__.py  __main__.py  analyser.py  beq.ipynb  filter.py  loader.py  reporter.py
